toolbar: Don't leak previous allocations

When undo_active/redo_active is FALSE, undo_label/redo_label
was getting overwritten irrespective of whether they were
NULL or not.

Let the label values be freed incase they are updated.

https://bugzilla.gnome.org/show_bug.cgi?id=782083